--- a/scss/component/_navbar.scss
+++ b/scss/component/_navbar.scss
@@ -25,6 +25,7 @@
                 .navbar-nav {
                     .dropdown-menu {
                         position: static;
+                        margin: 0;
                     }
                 }
             }
@@ -153,6 +154,7 @@
                             .navbar-nav {
                                 .dropdown-menu {
                                     position: static;
+                                    margin: 0;
                                 }
                             }
                         }
