--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -24,6 +24,7 @@
 }
 
 @mixin make-col-auto() {
+    flex: 0 0 auto;
     width: auto;
 }
 
@@ -74,9 +75,38 @@
                 flex-grow: 1;
                 min-width: 0;
             }
+        }
+    }
+
+    // Responsive Row Columns
+    @each $breakpoint in $row-columns-breakpoints {
+        $bprule: breakpoint-designator($breakpoint);
+
+        @include media-breakpoint-up($breakpoint, $breakpoints) {
+            @if $enable-grid-row-cols {
+                .row-cols#{$bprule}-auto > * {
+                    @include make-col-auto();
+                }
+
+                @for $i from 1 through $grid-row-columns {
+                    .row-cols#{$bprule}-#{$i} {
+                        @include row-cols($i);
+                    }
+                }
+            }
+        }
+    }
+
+
+    // Standard columns
+    @each $breakpoint in map-keys($breakpoints) {
+        $bprule: breakpoint-designator($breakpoint);
+
+        @include media-breakpoint-up($breakpoint, $breakpoints) {
             .col#{$bprule}-auto {
                 @include make-col-auto();
             }
+
             @for $i from 1 through $columns {
                 .col#{$bprule}-#{$i} {
                     @include make-col($i, $columns);
@@ -89,26 +119,6 @@
                     .offset#{$bprule}-#{$i} {
                         @include make-col-offset($i, $columns);
                     }
-                }
-            }
-        }
-    }
-}
-
-// Responsive Row Columns
-@mixin make-row-columns($columns: $grid-row-columns, $breakpoints: $grid-breakpoints) {
-
-    @each $breakpoint in $row-columns-breakpoints {
-        $bprule: breakpoint-designator($breakpoint);
-
-        @include media-breakpoint-up($breakpoint, $breakpoints) {
-            .row-cols#{$bprule}-auto > * {
-                @include make-col-auto();
-            }
-
-            @for $i from 1 through $columns {
-                .row-cols#{$bprule}-#{$i} {
-                    @include row-cols($i);
                 }
             }
         }
