Layout-Grid: Rework columns to use `width` (#567)
* Split grid and container mixins

* Change grid gutter to 1.5rem, keep current container padding

* Drop `position: relative;` from columns

* Update comment and class for grid example and test for column clearing

* Fix contrast issue

* Change colums to `width` instead of `flex-basis` and `max-width`

* Revert gutter and container padding for now

* Fix issues with `.row-cols-auto` and ordering for `.row-cols-#`

* Migration note

--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -1,26 +1,6 @@
 /// Grid system
 // Generate semantic grid columns with these mixins.
 
-// Containers
-@mixin make-container($padding-x: $container-padding-x) {
-    width: 100%;  // Prevent too narrow
-    max-width: 100%; // Prevent too wide
-    padding-right: $padding-x;
-    padding-left: $padding-x;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-// For each breakpoint, define the maximum width of the container in a media query
-@mixin make-container-max-widths($max-widths: $container-max-widths, $breakpoints: $grid-breakpoints) {
-    @each $breakpoint, $container-max-width in $max-widths {
-        @include media-breakpoint-up($breakpoint, $breakpoints) {
-            max-width: $container-max-width;
-        }
-    }
-}
-
-
 // Rows
 @mixin make-row($gutter: $grid-gutter-width) {
     display: flex;
@@ -32,24 +12,20 @@
 
 // Columns
 @mixin make-col-ready($gutter: $grid-gutter-width) {
-    position: relative;
-    width: 100%; // Prevent too narrow
+    flex: 0 0 auto;
+    width: 100%; // Prevent too narrow - width is reset later
+    max-width: 100%; // Prevent too wide
     padding-right: ($gutter / 2);
     padding-left: ($gutter / 2);
 }
 
 @mixin make-col($size, $columns: $grid-columns) {
-    flex: 0 0 percentage($size / $columns);
-    // Add a `max-width` to ensure content within each column does not blow out
-    // the width of the column. Applies to IE10+ and Firefox. Chrome and Safari
-    // do not appear to require this.
-    max-width: percentage($size / $columns);
+    width: percentage($size / $columns);
 }
 
 @mixin make-col-auto() {
     flex: 0 0 auto;
     width: auto;
-    max-width: 100%;
 }
 
 @mixin make-col-offset($size, $columns: $grid-columns) {
@@ -65,8 +41,8 @@
 // style grid.
 @mixin row-cols($count) {
     & > * {
-        flex: 0 0 100% / $count;
-        max-width: 100% / $count;
+        flex: 0 0 auto;
+        width: 100% / $count;
     }
 }
 
@@ -75,10 +51,7 @@
 @mixin make-grid-columns($columns: $grid-columns, $breakpoints: $grid-breakpoints, $gutter: $grid-gutter-width) {
     // Use a placeholder selector to extend upon
     %col {
-        position: relative;
-        width: 100%; // Prevent too narrow
-        padding-right: ($gutter / 2);
-        padding-left: ($gutter / 2);
+        @include make-col-ready();
     }
 
     @each $breakpoint in map-keys($breakpoints) {
@@ -97,23 +70,43 @@
 
         @include media-breakpoint-up($breakpoint, $breakpoints) {
             // Provide basic `.col-{bp}` classes for equal-width flexbox columns
-            %col-flex-basic-#{$breakpoint} {
+            .col#{$bprule} {
                 flex-basis: 0;
                 flex-grow: 1;
                 min-width: 0;
-                max-width: 100%;
             }
+        }
+    }
 
-            %col-flex-auto-#{$breakpoint} {
+    // Responsive Row Columns
+    @each $breakpoint in $row-columns-breakpoints {
+        $bprule: breakpoint-designator($breakpoint);
+
+        @include media-breakpoint-up($breakpoint, $breakpoints) {
+            @if $enable-grid-row-cols {
+                .row-cols#{$bprule}-auto > * {
+                    @include make-col-auto();
+                }
+
+                @for $i from 1 through $grid-row-columns {
+                    .row-cols#{$bprule}-#{$i} {
+                        @include row-cols($i);
+                    }
+                }
+            }
+        }
+    }
+
+
+    // Standard columns
+    @each $breakpoint in map-keys($breakpoints) {
+        $bprule: breakpoint-designator($breakpoint);
+
+        @include media-breakpoint-up($breakpoint, $breakpoints) {
+            .col#{$bprule}-auto {
                 @include make-col-auto();
             }
 
-            .col#{$bprule} {
-                @extend %col-flex-basic-#{$breakpoint};
-            }
-            .col#{$bprule}-auto {
-                @extend %col-flex-auto-#{$breakpoint};
-            }
             @for $i from 1 through $columns {
                 .col#{$bprule}-#{$i} {
                     @include make-col($i, $columns);
@@ -126,21 +119,6 @@
                     .offset#{$bprule}-#{$i} {
                         @include make-col-offset($i, $columns);
                     }
-                }
-            }
-        }
-    }
-}
-
-// Responsive Row Columns
-@mixin make-row-columns($columns: $grid-row-columns, $breakpoints: $grid-breakpoints) {
-    @each $breakpoint in $row-columns-breakpoints {
-        $bprule: breakpoint-designator($breakpoint);
-
-        @include media-breakpoint-up($breakpoint, $breakpoints) {
-            @for $i from 1 through $columns {
-                .row-cols#{$bprule}-#{$i} {
-                    @include row-cols($i);
                 }
             }
         }
