--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -7,6 +7,7 @@ $enable-root-fonts:                         true !default;
 // Grid layout
 $enable-grid-row-cols:                      true !default;
 $enable-grid-responsive-containers:         true !default;
+$enable-grid-responsive-gutters:            true !default;
 
 // Base Typography
 $enable-typography:                         true !default;
