--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -435,9 +435,18 @@ progress {
 }
 
 // Fix height of inputs with a type of datetime-local, date, month, week, or time
-::-webkit-datetime-edit {
-    overflow: visible;
-    line-height: 0;
+::-webkit-datetime-edit-fields-wrapper,
+::-webkit-datetime-edit-text,
+::-webkit-datetime-edit-minute,
+::-webkit-datetime-edit-hour-field,
+::-webkit-datetime-edit-day-field,
+::-webkit-datetime-edit-month-field,
+::-webkit-datetime-edit-year-field {
+    padding: 0;
+}
+
+::-webkit-inner-spin-button {
+    height: auto;
 }
 
 [type="search"] {
