--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -79,7 +79,7 @@
         font-weight: $font-weight-normal;
         color: $dropdown-link-color;
         text-align: inherit; // 1
-        text-decoration: none;
+        text-decoration: if($link-decoration == none, null, none);
         white-space: nowrap; // prevent links from randomly breaking onto new lines
         background: none; // 1
         border: 0; // 1
@@ -97,13 +97,12 @@
 
         &.active {
             color: $dropdown-link-active-color;
-            text-decoration: none;
             background-color: $dropdown-link-active-bg;
         }
 
         @include hover-focus() {
             color: $dropdown-link-hover-color;
-            text-decoration: none;
+            text-decoration: if($link-hover-decoration == underline, none, null);
             background-color: $dropdown-link-hover-bg;
         }
 
