--- a/scss/component/_nav.scss
+++ b/scss/component/_nav.scss
@@ -13,11 +13,17 @@
     .nav-link {
         display: block;
         padding: $nav-link-padding-y $nav-link-padding-x;
+        text-decoration: $nav-link-decoration;
+
+        @include hover-focus() {
+            text-decoration: $nav-link-hover-decoration;
+        }
 
         // Disabled state lightens text and removes hover/focus effects
         // By default it also influences `.nav-tab` and `.nav-pills`
         &.disabled {
             color: $nav-link-disabled-color;
+            text-decoration: none;
             pointer-events: none;
             cursor: default;
             opacity: $nav-link-disabled-opacity;
