Content-Forms: Add sizing for `.form-file`, and within sized `.input-group`s, additional color var for `.form-check-label`

--- a/scss/_settings-options.scss
+++ b/scss/_settings-options.scss
@@ -69,6 +69,7 @@ $enable-form-check:                         true !default;
 $enable-form-check-checkradio:              true !default;
 $enable-form-check-switch:                  true !default;
 $enable-form-file:                          true !default;
+$enable-form-file-sizing:                   true !default;
 $enable-form-range:                         true !default;
 $enable-form-color:                         true !default;
 $enable-form-group:                         true !default;
