--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -841,6 +841,7 @@ $form-inline-check-margin-x:    .25em !default;
 // Form check
 $form-check-gutter:                 1.25em !default;
 $form-check-margin-bottom:          .25rem !default;
+$form-check-label-color:            null !default;
 $form-check-label-font-weight:      null !default;
 $form-check-label-cursor:           null !default;
 $form-check-label-disabled-opacity: .6 !default;
@@ -918,6 +919,8 @@ $form-select-indicator-position:    right $form-select-indicator-offset center !
 // Form file
 $form-file-button-color:            $uibase-600 !default;
 $form-file-button-bg:               $uibase-50 !default;
+$form-file-button-font-family:      $btn-font-family !default;
+$form-file-button-font-weight:      $btn-font-weight !default;
 $form-file-button-disabled-color:   $component-disabled-color !default;
 $form-file-button-disabled-bg:      $uibase-50 !default;
 $form-file-button-disabled-opacity: 1 !default;
