--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -111,6 +111,12 @@
                 @extend %form-control-#{$size};
             }
 
+            @if $enable-form-file {
+                .input-group-#{$size} > .form-file {
+                    @extend %form-file-#{$size} !optional;
+                }
+            }
+
             @if $enable-btn {
                 .input-group-#{$size} > .btn {
                     @extend %btn-#{$size};
