--- a/scss/forms/_form-file.scss
+++ b/scss/forms/_form-file.scss
@@ -2,6 +2,8 @@
 @if $enable-form and $enable-form-file {
     .form-file {
         position: relative;
+        @include font-size($input-font-size);
+        line-height: $input-line-height;
     }
 
     .form-file-input {
@@ -81,9 +83,7 @@
         padding: $input-padding-y $input-padding-x;
         overflow: hidden;
         font-family: $input-font-family;
-        @include font-size($input-font-size);
         font-weight: $input-font-weight;
-        line-height: $input-line-height;
         text-overflow: ellipsis;
         white-space: nowrap;
         border: $input-border-width solid;
@@ -96,14 +96,52 @@
         flex-shrink: 0;
         padding: $input-padding-y $input-padding-x;
         margin-left: -$input-border-width;
-        font-family: $btn-font-family;
-        @include font-size($btn-font-size);
-        font-weight: $btn-font-weight;
-        line-height: $input-line-height;
+        font-family: $form-file-button-font-family;
+        font-weight: $form-file-button-font-weight;
         color: $form-file-button-color;
         background-color: $form-file-button-bg;
         border: $input-border-width solid;
         border-color: inherit;
         @include border-end-radius(inherit);
+    }
+
+    // Sizing
+    @if $enable-sizing {
+        @each $size, $dims in $input-sizes {
+            $sz-font-size:     map-get($dims, "font-size");
+            $sz-line-height:   map-get($dims, "line-height");
+            $sz-padding-y:     map-get($dims, "padding-y");
+            $sz-padding-x:     map-get($dims, "padding-x");
+            $sz-border-radius: map-get($dims, "border-radius");
+
+            %form-file-#{$size} {
+                @include font-size($sz-font-size);
+                line-height: $sz-line-height;
+
+                .form-file-input,
+                .form-file-label {
+                    height: calc-input-height-outer($sz-padding-y, $sz-line-height);
+                }
+
+                .form-file-label {
+                    @include border-radius($sz-border-radius);
+                }
+
+                .form-file-text,
+                .form-file-button {
+                    @if $sz-padding-y != null and $sz-padding-x != null {
+                        $my-padding-y: if($sz-padding-y != null, $sz-padding-y, $input-padding-y);
+                        $my-padding-x: if($sz-padding-x != null, $sz-padding-x, $input-padding-x);
+                        padding: $my-padding-y $my-padding-x;
+                    }
+                }
+            }
+
+            @if $enable-form-file-sizing {
+                .form-file-#{$size} {
+                    @extend %form-file-#{$size};
+                }
+            }
+        }
     }
 }
