--- a/scss/core/_tables.scss
+++ b/scss/core/_tables.scss
@@ -222,7 +222,7 @@
     }
 
     // Scrolling table
-    // Add `.table-scroll` to table to enable horizontal scrolling.
+    // Add `.table-scroll` wrapper to a table to enable horizontal scrolling.
     // Tables will scroll when they will no longer fit width-wise in their container.
     @if $enable-table-scroll {
         .table-scroll {
@@ -230,10 +230,9 @@
         }
 
         // Responsive scrolling table
-        // Tables will no longet scroll when breakpoint is larger than the one designated.
+        // Tables will no longer scroll when breakpoint is larger than the one designated.
         @if $enable-table-scroll-responsive {
             @each $bp in $table-scroll-breakpoints {
-                $bprule: breakpoint-designator($bp);
 
                 // Skip largest breakpoint for down (equivalent to `.table-scroll`)
                 @if breakpoint-max($bp, $grid-breakpoints) != null {
