Component-Nav: Add transition to `.nav-link`

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -621,6 +621,7 @@ $btn-transition:            color .15s ease-in-out, background-color .15s ease-i
 $input-transition:          background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
 $modal-transition:          transform .15s linear !default;
 $navbar-toggle-transition:  box-shadow .15s ease-in-out !default;
+$nav-link-transition:       color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out !default;
 $progress-bar-transition:   width .3s ease !default;
 $switch-transition:         all .15s ease-in-out !default;
 
