--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -26,6 +26,7 @@
 @import "mixins/pagination";
 @import "mixins/switch";
 @import "mixins/tables";
+@import "mixins/modal";
 
 // Layout
 @import "mixins/clearfix";
