--- a/scss/component/_modal.scss
+++ b/scss/component/_modal.scss
@@ -152,6 +152,7 @@
         display: flex;
         flex-direction: column;
         width: 100%; // Ensure `.modal-content` extends the full width of the parent `.modal-dialog`
+        height: 100%;
         color: $modal-content-color;
         // Override the `pointer-events: none;` in the .modal-dialog
         pointer-events: auto;
@@ -237,6 +238,7 @@
             // Make body as tall as possible if there is a height defined on `.modal-content`
             flex: 1 1 auto;
             padding: $modal-body-padding-y $modal-body-padding-x;
+            overflow-y: auto;
         }
     }
 
@@ -332,6 +334,26 @@
         @if $enable-modal-side-end {
             .modal-dialog-side-end.modal-dialog-scrollable {
                 @extend %modal-side-scrollable;
+            }
+        }
+    }
+
+    @if $enable-modal-fullscreen {
+        .modal-fullscreen {
+            @include modal-fullscreen();
+        }
+    }
+
+    @if $enable-modal-fullscreen-responsive {
+        @each $bp in $modal-fullscreen-breakpoints {
+
+            // Skip largest for down (equivalent to `.modal-fullscreen`)
+            @if breakpoint-max($bp, $grid-breakpoints) != null {
+                @include media-breakpoint-down($bp) {
+                    .modal-fullscreen-#{$bp}-down {
+                        @include modal-fullscreen();
+                    }
+                }
             }
         }
     }
