Modal: Add fullscreen variant (#587)
* Base concept with some tweaks to handle viewport height when scrollable variant

* Resolve IE layout and update scroll resets

* Legacy Edge fix and added docs

--- a/scss/component/_modal.scss
+++ b/scss/component/_modal.scss
@@ -335,4 +335,24 @@
             }
         }
     }
+
+    @if $enable-modal-fullscreen {
+        .modal-fullscreen {
+            @include modal-fullscreen();
+        }
+    }
+
+    @if $enable-modal-fullscreen-responsive {
+        @each $bp in $modal-fullscreen-breakpoints {
+
+            // Skip largest for down (equivalent to `.modal-fullscreen`)
+            @if breakpoint-max($bp, $grid-breakpoints) != null {
+                @include media-breakpoint-down($bp) {
+                    .modal-fullscreen-#{$bp}-down {
+                        @include modal-fullscreen();
+                    }
+                }
+            }
+        }
+    }
 }
